--- a/Expediente/App.config
+++ b/Expediente/App.config
@@ -22,6 +22,15 @@
             <setting name="database" serializeAs="String">
                 <value />
             </setting>
+            <setting name="port" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="account" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="main_size" serializeAs="String">
+                <value>560, 480</value>
+            </setting>
         </Expediente.Properties.Settings>
     </userSettings>
 </configuration>
